# gitz

./: Cargo.toml  README.md  USAGE.md
.github/workflows/: rust.yml
src/: cli.rs  commit_message.rs  content_filter.rs  git.rs  main.rs  readme.rs
src/handlers/: git.rs  json.rs  mod.rs  utils.rs
src/handlers/ai/: cerebras_provider.rs  gemini_provider.rs  mod.rs
src/handlers/commit/: diff.rs  filter.rs  message.rs  mod.rs  prompts.rs
src/handlers/readme/: analysis.rs  filter.rs  generator.rs  mod.rs
src/handlers/readme/file_filtering/: mod.rs
src/handlers/readme/prompts/: analysis.rs  generation.rs  mod.rs
src/models/: cli.rs  error.rs  mod.rs  readme.rs  ui.rs
src/models/ui/: input.rs  logger.rs  mod.rs  progress.rs
