[package]
name = "gitz-cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Tenuka22/gitz"

[badges]
github-actions = { repository = "Tenuka22/gitz", workflow = "Rust" }


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
gemini-rust = "1.5.1"
colored = "2.1"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.148"
tempfile = "3.24.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
